# niclips

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  pyproject.toml
src/niclips/: __init__.py  _version.py  typing.py
src/niclips/core/: factory.py  plugins.py  specs.py
src/niclips/plugins/neuro/: common.py
tests/core/: test_factory.py  test_plugins.py
